--- a/chatgpt_product_extension/manifest.json
+++ b/chatgpt_product_extension/manifest.json
@@ -1,40 +1,31 @@
 {
-    "manifest_version": 3,
-    "name": "ChatGPT Product Extractor",
-    "version": "1.1",
-    "permissions": ["storage", "activeTab", "scripting"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
-      {
-        "matches": [
-          "https://chat.openai.com/*",
-          "https://chatgpt.com/*",
-          "http://localhost:8000/*",
-          "http://127.0.0.1:8000/*",
-          "http://localhost:8080/*",
-          "http://127.0.0.1:8080/*"
-        ],
-        "js": ["content.js"]
-      }
-    ],
-    "web_accessible_resources": [
-      {
-        "resources": ["injected.js"],
-        "matches": [
-          "https://chat.openai.com/*",
-          "https://chatgpt.com/*",
-          "http://localhost:8000/*",
-          "http://127.0.0.1:8000/*",
-          "http://localhost:8080/*",
-          "http://127.0.0.1:8080/*"
-        ]
-      }
-    ],
-    "host_permissions": [
-      "http://localhost:8000/*",
-      "http://127.0.0.1:8000/*"
-    ]
-  }
+  "manifest_version": 3,
+  "name": "ChatGPT Product Extractor",
+  "version": "1.1",
+  "permissions": ["storage", "activeTab", "scripting"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "https://chat.openai.com/*",
+        "https://chatgpt.com/*",
+        "https://aunpbdtpdp.us-west-2.awsapprunner.com/*"
+      ],
+      "js": ["content.js"]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["injected.js"],
+      "matches": [
+        "https://chat.openai.com/*",
+        "https://chatgpt.com/*",
+        "https://aunpbdtpdp.us-west-2.awsapprunner.com/*"
+      ]
+    }
+  ],
+  "host_permissions": ["https://aunpbdtpdp.us-west-2.awsapprunner.com/*"]
+}
   
